k8s/admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppf-admin
  namespace: ppf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ppf-admin
  template:
    metadata:
      labels:
        app: ppf-admin
    spec:
      containers:
        - name: admin
          image: ppf-admin:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: ppf-admin
  namespace: ppf
spec:
  selector:
    app: ppf-admin
  ports:
    - port: 4000
