k8s/pgadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: ppf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: ppf
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
